# tts-webui.SongBloom

./: .gitignore  LICENSE  MANIFEST.in  README.md  allprompt1129  infer.py  infer.sh  pyproject.toml  requirements.txt  set_env_chongqing.sh  setup.py
SongBloom/: registry.py
SongBloom/models/musicgen/: get_backend.py
SongBloom/models/musicgen/conditioners/: __init__.py  joint.py  text.py  wav.py
SongBloom/models/musicldm/: musicldm_dit.py
SongBloom/models/songbloom/: songbloom_mvsa.py  songbloom_pl.py
conf/: songbloom_large_150s_semantic_mvsa_block16_cq_infer.yaml  vocab_g2p.yaml
docs/: lyric_format.md
example/: test.jsonl
